Updated web adress

--- a/cv.tex
+++ b/cv.tex
@@ -40,7 +40,7 @@
 \hspace{-1in}
 \begin{minipage}[t]{0.93\resumewidth}
 Email: \href{mailto:jlustigy@uw.edu}{jlustigy@uw.edu} \hfill GitHub: \href{https://github.com/jlustigy}{jlustigy}\\
-Web: \url{https://jlustigy.github.io/}
+Web: \url{http://staff.washington.edu/jlustigy/}
 \end{minipage}
 
 
