Updates from ShareLaTeX

--- a/cv.tex
+++ b/cv.tex
@@ -119,7 +119,7 @@ Minor in Mathematics\\
 
 \section{Publications} 
                 \begin{benumerate}{7}  
-                    \item Fujii, Y., \textbf{Lustig-Yaeger, J.}, \& Cowan, N. B. (2017). \href{http://adsabs.harvard.edu/abs/2017arXiv170804886F}{``Rotational Spectral Unmixing of Exoplanets: Degeneracies between Surface Colors and Geography''}. \textit{arXiv preprint arXiv:1708.04886.}
+                    \item Fujii, Y., \textbf{Lustig-Yaeger, J.}, \& Cowan, N. B. (2017). \href{http://adsabs.harvard.edu/abs/2017arXiv170804886F}{``Rotational Spectral Unmixing of Exoplanets: Degeneracies between Surface Colors and Geography''}. \textit{The Astronomical Journal}, 154(5), 189.
                     \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., Lyons, T. W., Siegler, N., \& \textbf{Lustig-Yaeger, J.} (2017).  \href{http://adsabs.harvard.edu/abs/2017arXiv170507560M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{arXiv preprint 1705.07560.}
                     \item Luger, R., \textbf{Lustig-Yaeger, J.}, Fleming, D. P., Tilley, M. A., Agol, E, Meadows, V. S., Deitrick, R., \& Barnes, R. (2017). \href{http://adsabs.harvard.edu/abs/2017ApJ...837...63L}{``The Pale Green Dot: A Method to Characterize Proxima Centauri b using Exo-Aurorae''}. \textit{The Astrophysical Journal}, 837, 63.
                     \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2017, in review). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.08620}{``The Habitability of Proxima Centauri b II: Environmental States and Observational Discriminants''}. \textit{arXiv preprint arXiv:1608.08620.}
@@ -128,7 +128,11 @@ Minor in Mathematics\\
                     \item Freedman, R. S., \textbf{Lustig-Yaeger, J.}, Fortney, J. J., Lupu, R. E., Marley, M. S., \& Lodders, K. (2014). \href{http://adsabs.harvard.edu/abs/2014ApJS..214...25F}{``Gaseous Mean Opacities for Giant Planet and Ultracool Dwarf Atmospheres over a Range of Metallicities and Temperatures''}. \textit{The Astrophysical Journal Supplement Series}, 214(2), 25.\\
                  \end{benumerate}
                  
-\section{Conference \\Presentations} 
+\section{Presentations} 
+                {\sl Invited Talks}
+                \begin{benumerate}{1}
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
+                \end{benumerate}
                 {\sl Contributed Talks}
                 \begin{benumerate}{2}
                     \item \textbf{Lustig-Yaeger, J.}, Tovar, G., Fujii, Y., Schwieterman, E., \& Meadows, V.\ (2017). \href{http://www.lpi.usra.edu/meetings/abscicon2017/pdf/3558.pdf}{``Mapping Surfaces and Clouds on Terrestrial Exoplanets Observed with Next-Generation Coronagraph-Equipped Telescopes''}. Astrobiology Science Conference, \#3558
