Updates from Habitable Worlds 2017

--- a/cv.tex
+++ b/cv.tex
@@ -96,7 +96,7 @@ Minor in Mathematics\\
 \section{Teaching \\Experience} 
                 {\sl Research Mentor} \hfill Sept 2016 --
                     \begin{itemize}  \itemsep -1pt %reduce space between items
-                        \item \href{https://www.washington.edu/undergradresearch/guadalupe-tovar/}{Guadalupe Tovar} (UW Undergraduate)
+                        \item Guadalupe Tovar (UW Undergraduate)
                     \end{itemize}
                 {\sl Teaching Assistant}: Department of Astronomy, University of Washington   \hfill          Sept 2014 -- June 2015\\
                 Led two biweekly sections for undergraduate students
@@ -118,12 +118,13 @@ Minor in Mathematics\\
                  \end{itemize}  
 
 \section{Publications} 
-                \begin{benumerate}{7}  
+                \begin{benumerate}{8}
+                    \item Luger, R., \textbf{Lustig-Yaeger, J.}, \& Agol, E. (2017).  \href{http://adsabs.harvard.edu/abs/2017arXiv171105739L}{``Planet-Planet Occultations in TRAPPIST-1 and Other Exoplanet Systems''}. \textit{arXiv preprint 1711.05739.}
                     \item Fujii, Y., \textbf{Lustig-Yaeger, J.}, \& Cowan, N. B. (2017). \href{http://adsabs.harvard.edu/abs/2017arXiv170804886F}{``Rotational Spectral Unmixing of Exoplanets: Degeneracies between Surface Colors and Geography''}. \textit{The Astronomical Journal}, 154(5), 189.
                     \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., Lyons, T. W., Siegler, N., \& \textbf{Lustig-Yaeger, J.} (2017).  \href{http://adsabs.harvard.edu/abs/2017arXiv170507560M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{arXiv preprint 1705.07560.}
                     \item Luger, R., \textbf{Lustig-Yaeger, J.}, Fleming, D. P., Tilley, M. A., Agol, E, Meadows, V. S., Deitrick, R., \& Barnes, R. (2017). \href{http://adsabs.harvard.edu/abs/2017ApJ...837...63L}{``The Pale Green Dot: A Method to Characterize Proxima Centauri b using Exo-Aurorae''}. \textit{The Astrophysical Journal}, 837, 63.
-                    \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2017, in review). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.08620}{``The Habitability of Proxima Centauri b II: Environmental States and Observational Discriminants''}. \textit{arXiv preprint arXiv:1608.08620.}
-                    \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017, in review). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}
+                    \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.08620}{``The Habitability of Proxima Centauri b II: Environmental States and Observational Discriminants''}. \textit{arXiv preprint arXiv:1608.08620.}
+                    \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}
                     \item Greene, T. P., Line, M. R., Montero, C., Fortney, J. J., \textbf{Lustig-Yaeger, J.}, \& Luther, K. (2016). \href{http://adsabs.harvard.edu/abs/2016ApJ...817...17G}{``Characterizing transiting exoplanet atmospheres with JWST''}. \textit{The Astrophysical Journal}, 817(1), 17.
                     \item Freedman, R. S., \textbf{Lustig-Yaeger, J.}, Fortney, J. J., Lupu, R. E., Marley, M. S., \& Lodders, K. (2014). \href{http://adsabs.harvard.edu/abs/2014ApJS..214...25F}{``Gaseous Mean Opacities for Giant Planet and Ultracool Dwarf Atmospheres over a Range of Metallicities and Temperatures''}. \textit{The Astrophysical Journal Supplement Series}, 214(2), 25.\\
                  \end{benumerate}
@@ -134,12 +135,15 @@ Minor in Mathematics\\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
                 \end{benumerate}
                 {\sl Contributed Talks}
-                \begin{benumerate}{2}
+                \begin{benumerate}{3}
+                    \item \textbf{Lustig-Yaeger, J.}, Luger, R., \& Agol, E. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4100.pdf}{``Probing the Orbital Dynamics and Atmospheric Properties of the TRAPPIST-1 Planets with JWST''}. Habitable Worlds 2017, \#4100
                     \item \textbf{Lustig-Yaeger, J.}, Tovar, G., Fujii, Y., Schwieterman, E., \& Meadows, V.\ (2017). \href{http://www.lpi.usra.edu/meetings/abscicon2017/pdf/3558.pdf}{``Mapping Surfaces and Clouds on Terrestrial Exoplanets Observed with Next-Generation Coronagraph-Equipped Telescopes''}. Astrobiology Science Conference, \#3558
                     \item \textbf{Lustig-Yaeger, J.}, Line, M.~R., \& Fortney, J.~J.\ (2015). \href{http://adsabs.harvard.edu/abs/2015AAS...22512403L}{``On the Confidence of Molecular Detections in the Atmospheres of Exoplanets from Secondary Eclipse Spectra''}. American Astronomical Society Meeting Abstracts, 225, \#124.03
                 \end{benumerate}
                 {\sl Posters}
-                \begin{benumerate}{6}  
+                \begin{benumerate}{8}  
+                    \item \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., \& Meadows, V. S. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4098.pdf}{``Extending Atmospheric Characterization to Earth-Sized Exoplanets with JWST: Transits, Eclipses, and the TRAPPIST-1 System''}. Habitable Worlds 2017, Laramie, WY \#4098
+                    \item \textbf{Lustig-Yaeger, J.}, Tovar, G., Schwieterman, E. W., Fujii, Y., \& Meadows, V. S. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4110.pdf}{``Detecting Oceans on Exoplanets Using Phase-Dependent Mapping with Next-Generation Coronagraph-Equipped Telescopes''}. Habitable Worlds 2017, Laramie, WY \#4110
                     \item \textbf{Lustig-Yaeger, J.}, Schwieterman, E., Meadows, V., \& Fujii, Y. (2016). \href{http://adsabs.harvard.edu/abs/2016DPS....4812234L}{``Modeling Earth's Disk-Integrated, Time-Dependent Spectrum: Applications to Directly Imaged Habitable Planets''}. AAS/Division for Planetary Sciences Meeting Abstracts, 48, \#122.34
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Schwieterman, E. W., \& Robinson, T. (2016). \href{http://www.exoplanetscience.org/speakers}{``Modeling Earth’s Disk-Integrated Spectrum through a Lunar Month: 
                     Applications to Directly Imaged Habitable Exoplanets''}. Exoplanets I
