--- a/cv.tex
+++ b/cv.tex
@@ -119,11 +119,11 @@ Minor in Mathematics\\
 
 \section{Publications} 
                 \begin{benumerate}{8}
-                    \item Luger, R., \textbf{Lustig-Yaeger, J.}, \& Agol, E. (2017).  \href{http://adsabs.harvard.edu/abs/2017arXiv171105739L}{``Planet-Planet Occultations in TRAPPIST-1 and Other Exoplanet Systems''}. \textit{arXiv preprint 1711.05739.}
+                    \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., \textbf{Lustig-Yaeger, J.}, Lyons, T. W., \& Siegler, N. (2018).  \href{http://adsabs.harvard.edu/abs/2018AsBio..18..630M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{Astrobiology}, 18, 630-662.
+                    \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2018). \href{http://adsabs.harvard.edu/abs/2018AsBio..18..133M}{``The Habitability of Proxima Centauri b: Environmental States and Observational Discriminants''}. \textit{Astrobiology}, 18, 133-189.
+                    \item Luger, R., \textbf{Lustig-Yaeger, J.}, \& Agol, E. (2017).  \href{http://adsabs.harvard.edu/abs/2017ApJ...851...94L}{``Planet-Planet Occultations in TRAPPIST-1 and Other Exoplanet Systems''}. \textit{The Astrophysical Journal}, 851(2), 94.
                     \item Fujii, Y., \textbf{Lustig-Yaeger, J.}, \& Cowan, N. B. (2017). \href{http://adsabs.harvard.edu/abs/2017arXiv170804886F}{``Rotational Spectral Unmixing of Exoplanets: Degeneracies between Surface Colors and Geography''}. \textit{The Astronomical Journal}, 154(5), 189.
-                    \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., Lyons, T. W., Siegler, N., \& \textbf{Lustig-Yaeger, J.} (2017).  \href{http://adsabs.harvard.edu/abs/2017arXiv170507560M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{arXiv preprint 1705.07560.}
                     \item Luger, R., \textbf{Lustig-Yaeger, J.}, Fleming, D. P., Tilley, M. A., Agol, E, Meadows, V. S., Deitrick, R., \& Barnes, R. (2017). \href{http://adsabs.harvard.edu/abs/2017ApJ...837...63L}{``The Pale Green Dot: A Method to Characterize Proxima Centauri b using Exo-Aurorae''}. \textit{The Astrophysical Journal}, 837, 63.
-                    \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.08620}{``The Habitability of Proxima Centauri b II: Environmental States and Observational Discriminants''}. \textit{arXiv preprint arXiv:1608.08620.}
                     \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}
                     \item Greene, T. P., Line, M. R., Montero, C., Fortney, J. J., \textbf{Lustig-Yaeger, J.}, \& Luther, K. (2016). \href{http://adsabs.harvard.edu/abs/2016ApJ...817...17G}{``Characterizing transiting exoplanet atmospheres with JWST''}. \textit{The Astrophysical Journal}, 817(1), 17.
                     \item Freedman, R. S., \textbf{Lustig-Yaeger, J.}, Fortney, J. J., Lupu, R. E., Marley, M. S., \& Lodders, K. (2014). \href{http://adsabs.harvard.edu/abs/2014ApJS..214...25F}{``Gaseous Mean Opacities for Giant Planet and Ultracool Dwarf Atmospheres over a Range of Metallicities and Temperatures''}. \textit{The Astrophysical Journal Supplement Series}, 214(2), 25.\\
