--- a/cv.tex
+++ b/cv.tex
@@ -118,7 +118,8 @@ Minor in Mathematics\\
                  \end{itemize}  
 
 \section{Publications} 
-                \begin{benumerate}{8}
+                \begin{benumerate}{9}
+                    \item Lincowski, A. P., Meadows, V. S., Crisp, D., Robinson, T. D., Luger, R., \textbf{Lustig-Yaeger, J.}, \& Arney, G.N. (2018). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1809.07498}{``Evolved Climates and Observational Discriminants for the TRAPPIST-1 Planetary System''}. arXiv preprint arXiv:1809.07498.
                     \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., \textbf{Lustig-Yaeger, J.}, Lyons, T. W., \& Siegler, N. (2018).  \href{http://adsabs.harvard.edu/abs/2018AsBio..18..630M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{Astrobiology}, 18, 630-662.
                     \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2018). \href{http://adsabs.harvard.edu/abs/2018AsBio..18..133M}{``The Habitability of Proxima Centauri b: Environmental States and Observational Discriminants''}. \textit{Astrobiology}, 18, 133-189.
                     \item Luger, R., \textbf{Lustig-Yaeger, J.}, \& Agol, E. (2017).  \href{http://adsabs.harvard.edu/abs/2017ApJ...851...94L}{``Planet-Planet Occultations in TRAPPIST-1 and Other Exoplanet Systems''}. \textit{The Astrophysical Journal}, 851(2), 94.
