--- a/cv.tex
+++ b/cv.tex
@@ -61,7 +61,7 @@ Box 351580 \\
 Seattle, WA 98195-1580 \\
 
 \section{Education} 
-University of Washington, Seattle, WA \hfill 2014 --\\
+University of Washington, Seattle, WA \hfill 2014 -- Present\\
 Graduate student in Astronomy and Astrobiology (dual-title PhD program)  
 
 University of Washington, Seattle, WA \hfill 2014 -- 2016\\
@@ -72,7 +72,7 @@ B.S.\ with Honors in Physics \\
 Minor in Mathematics\\
 
 \section{Research \\Experience} 
-                {\sl Graduate Research Assistant}: Virtual Planetary Laboratory   \hfill          Sept 2014 --\\
+                {\sl Graduate Research Assistant}: Virtual Planetary Laboratory   \hfill          Sept 2014 -- Present\\
                 Extrasolar planets, their atmospheres, \& habitability with Dr. Victoria Meadows
                     \begin{itemize}  \itemsep -1pt %reduce space between items
                         \item Lead developer of a retrieval model for the analysis of terrestrial exoplanet spectra 
@@ -94,9 +94,10 @@ Minor in Mathematics\\
                     \end{itemize}
    
 \section{Teaching \\Experience} 
-                {\sl Research Mentor} \hfill Sept 2016 --
+                {\sl Research Mentor}: Department of Astronomy, University of Washington \hfill Sept 2016 -- Present
+                Advising undergraduate students in exoplanet astronomy and astrobiology research
                     \begin{itemize}  \itemsep -1pt %reduce space between items
-                        \item Guadalupe Tovar (UW Undergraduate)
+                %        \item Guadalupe Tovar (UW Undergraduate)
                     \end{itemize}
                 {\sl Teaching Assistant}: Department of Astronomy, University of Washington   \hfill          Sept 2014 -- June 2015\\
                 Led two biweekly sections for undergraduate students
@@ -118,7 +119,8 @@ Minor in Mathematics\\
                  \end{itemize}  
 
 \section{Publications} 
-                \begin{benumerate}{9}
+                \begin{benumerate}{10}
+                    \item Luger, R., Foreman-Mackey, E. A., Fleming, D. P., \textbf{Lustig-Yaeger, J.}, \& Deitrick, R. (2018). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.06559}{``STARRY: Analytic Occultation Light Curves''}. arXiv preprint arXiv:1810.06559.
                     \item Lincowski, A. P., Meadows, V. S., Crisp, D., Robinson, T. D., Luger, R., \textbf{Lustig-Yaeger, J.}, \& Arney, G.N. (2018). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1809.07498}{``Evolved Climates and Observational Discriminants for the TRAPPIST-1 Planetary System''}. arXiv preprint arXiv:1809.07498.
                     \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., \textbf{Lustig-Yaeger, J.}, Lyons, T. W., \& Siegler, N. (2018).  \href{http://adsabs.harvard.edu/abs/2018AsBio..18..630M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{Astrobiology}, 18, 630-662.
                     \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2018). \href{http://adsabs.harvard.edu/abs/2018AsBio..18..133M}{``The Habitability of Proxima Centauri b: Environmental States and Observational Discriminants''}. \textit{Astrobiology}, 18, 133-189.
