Updates from ShareLaTeX

--- a/cv.tex
+++ b/cv.tex
@@ -94,11 +94,12 @@ Minor in Mathematics\\
                     \end{itemize}
    
 \section{Teaching \\Experience} 
-                {\sl Research Mentor}: Department of Astronomy, University of Washington \hfill Sept 2016 -- Present
-                Advising undergraduate students in exoplanet astronomy and astrobiology research
-                    \begin{itemize}  \itemsep -1pt %reduce space between items
+                {\sl Research Mentor}: Department of Astronomy, University of Washington \hfill Sept 2016 -- Present\\
+                Advising undergraduate students in exoplanet astronomy and astrobiology research\\
+                \\
+                %    \begin{itemize}  \itemsep -1pt %reduce space between items
                 %        \item Guadalupe Tovar (UW Undergraduate)
-                    \end{itemize}
+                %    \end{itemize}
                 {\sl Teaching Assistant}: Department of Astronomy, University of Washington   \hfill          Sept 2014 -- June 2015\\
                 Led two biweekly sections for undergraduate students
                     \begin{itemize}  \itemsep -1pt %reduce space between items
