--- a/cv.tex
+++ b/cv.tex
@@ -140,7 +140,9 @@ Minor in Mathematics\\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
                 \end{benumerate}
                 {\sl Contributed Talks}
-                \begin{benumerate}{3}
+                \begin{benumerate}{5}
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{http://adsabs.harvard.edu/abs/2019AAS...23310303L}{``Simulating the Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. American Astronomical Society Meeting Abstracts, 233, \#103.03
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar, G., Schwieterman, E., W., Fujii, Y., Luger, R., \& Robinson, T. D.\ (2018). \href{https://agu.confex.com/agu/fm18/prelim.cgi/Paper/384157}{``Detecting Oceans on Exoplanets with Next-Generation Telescopes''}. 2018 AGU Fall Meeting, Washington, D.C., 10-14 Dec. P51B-09
                     \item \textbf{Lustig-Yaeger, J.}, Luger, R., \& Agol, E. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4100.pdf}{``Probing the Orbital Dynamics and Atmospheric Properties of the TRAPPIST-1 Planets with JWST''}. Habitable Worlds 2017, \#4100
                     \item \textbf{Lustig-Yaeger, J.}, Tovar, G., Fujii, Y., Schwieterman, E., \& Meadows, V.\ (2017). \href{http://www.lpi.usra.edu/meetings/abscicon2017/pdf/3558.pdf}{``Mapping Surfaces and Clouds on Terrestrial Exoplanets Observed with Next-Generation Coronagraph-Equipped Telescopes''}. Astrobiology Science Conference, \#3558
                     \item \textbf{Lustig-Yaeger, J.}, Line, M.~R., \& Fortney, J.~J.\ (2015). \href{http://adsabs.harvard.edu/abs/2015AAS...22512403L}{``On the Confidence of Molecular Detections in the Atmospheres of Exoplanets from Secondary Eclipse Spectra''}. American Astronomical Society Meeting Abstracts, 225, \#124.03
