--- a/cv.tex
+++ b/cv.tex
@@ -120,9 +120,14 @@ Minor in Mathematics\\
                  \end{itemize}  
 
 \section{Publications} 
-                \begin{benumerate}{11}
-                    \item Luger, R., Agol, E., Foreman-Mackey, D., Fleming, D. P., \textbf{Lustig-Yaeger, J.}, \& Deitrick, R. (2019).  \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.06559}{``STARRY: Analytic Occultation Light Curves''}. \textit{The Astronomical Journal}, 157(2), 64.
+                {\sl First Authored}
+                \begin{benumerate}{2}
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://arxiv.org/abs/1905.07070}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. \textit{arXiv preprint arXiv:1905.07070.}
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
+                \end{benumerate}
+                {\sl Co-Authored}
+                \begin{benumerate}{10}
+                    \item Luger, R., Agol, E., Foreman-Mackey, D., Fleming, D. P., \textbf{Lustig-Yaeger, J.}, \& Deitrick, R. (2019).  \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.06559}{``STARRY: Analytic Occultation Light Curves''}. \textit{The Astronomical Journal}, 157(2), 64.
                     \item Lincowski, A. P., Meadows, V. S., Crisp, D., Robinson, T. D., Luger, R., \textbf{Lustig-Yaeger, J.}, \& Arney, G.N. (2018). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1809.07498}{``Evolved Climates and Observational Discriminants for the TRAPPIST-1 Planetary System''}. \textit{The Astrophysical Journal}, 867(1), 76.
                     \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., \textbf{Lustig-Yaeger, J.}, Lyons, T. W., \& Siegler, N. (2018).  \href{http://adsabs.harvard.edu/abs/2018AsBio..18..630M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{Astrobiology}, 18, 630-662.
                     \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2018). \href{http://adsabs.harvard.edu/abs/2018AsBio..18..133M}{``The Habitability of Proxima Centauri b: Environmental States and Observational Discriminants''}. \textit{Astrobiology}, 18, 133-189.
@@ -131,7 +136,11 @@ Minor in Mathematics\\
                     \item Luger, R., \textbf{Lustig-Yaeger, J.}, Fleming, D. P., Tilley, M. A., Agol, E, Meadows, V. S., Deitrick, R., \& Barnes, R. (2017). \href{http://adsabs.harvard.edu/abs/2017ApJ...837...63L}{``The Pale Green Dot: A Method to Characterize Proxima Centauri b using Exo-Aurorae''}. \textit{The Astrophysical Journal}, 837, 63.
                     \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}
                     \item Greene, T. P., Line, M. R., Montero, C., Fortney, J. J., \textbf{Lustig-Yaeger, J.}, \& Luther, K. (2016). \href{http://adsabs.harvard.edu/abs/2016ApJ...817...17G}{``Characterizing transiting exoplanet atmospheres with JWST''}. \textit{The Astrophysical Journal}, 817(1), 17.
-                    \item Freedman, R. S., \textbf{Lustig-Yaeger, J.}, Fortney, J. J., Lupu, R. E., Marley, M. S., \& Lodders, K. (2014). \href{http://adsabs.harvard.edu/abs/2014ApJS..214...25F}{``Gaseous Mean Opacities for Giant Planet and Ultracool Dwarf Atmospheres over a Range of Metallicities and Temperatures''}. \textit{The Astrophysical Journal Supplement Series}, 214(2), 25.\\
+                    \item Freedman, R. S., \textbf{Lustig-Yaeger, J.}, Fortney, J. J., Lupu, R. E., Marley, M. S., \& Lodders, K. (2014). \href{http://adsabs.harvard.edu/abs/2014ApJS..214...25F}{``Gaseous Mean Opacities for Giant Planet and Ultracool Dwarf Atmospheres over a Range of Metallicities and Temperatures''}. \textit{The Astrophysical Journal Supplement Series}, 214(2), 25.
+                \end{benumerate}
+                {\sl Non-Peer Reviewed}
+                \begin{benumerate}{1}
+                    \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}\\
                  \end{benumerate}
                  
 \section{Presentations} 
