--- a/cv.tex
+++ b/cv.tex
@@ -126,7 +126,8 @@ Minor in Mathematics\\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
                 \end{benumerate}
                 {\sl Co-Authored}
-                \begin{benumerate}{10}
+                \begin{benumerate}{11}
+                    \item Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Meadows, V. S.  (2019). \href{https://arxiv.org/abs/1905.12821}{``Observing Isotopologue Bands in Terrestrial Exoplanet Atmospheres with the James Webb Space Telescope---Implications for Identifying Past Atmospheric and Ocean Loss''}. \textit{arXiv preprint arXiv:1905.12821.}
                     \item Luger, R., Agol, E., Foreman-Mackey, D., Fleming, D. P., \textbf{Lustig-Yaeger, J.}, \& Deitrick, R. (2019).  \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.06559}{``STARRY: Analytic Occultation Light Curves''}. \textit{The Astronomical Journal}, 157(2), 64.
                     \item Lincowski, A. P., Meadows, V. S., Crisp, D., Robinson, T. D., Luger, R., \textbf{Lustig-Yaeger, J.}, \& Arney, G.N. (2018). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1809.07498}{``Evolved Climates and Observational Discriminants for the TRAPPIST-1 Planetary System''}. \textit{The Astrophysical Journal}, 867(1), 76.
                     \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., \textbf{Lustig-Yaeger, J.}, Lyons, T. W., \& Siegler, N. (2018).  \href{http://adsabs.harvard.edu/abs/2018AsBio..18..630M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{Astrobiology}, 18, 630-662.
