Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -122,12 +122,12 @@ Minor in Mathematics\\
 \section{Publications} 
                 {\sl First Authored}
                 \begin{benumerate}{2}
-                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://arxiv.org/abs/1905.07070}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. \textit{arXiv preprint arXiv:1905.07070.}
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/1538-3881/ab21e0}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. \textit{The Astronomical Journal}, 158(1), 27.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
                 \end{benumerate}
                 {\sl Co-Authored}
                 \begin{benumerate}{11}
-                    \item Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Meadows, V. S.  (2019). \href{https://arxiv.org/abs/1905.12821}{``Observing Isotopologue Bands in Terrestrial Exoplanet Atmospheres with the James Webb Space Telescope---Implications for Identifying Past Atmospheric and Ocean Loss''}. \textit{arXiv preprint arXiv:1905.12821.}
+                    \item Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Meadows, V. S.  (2019). \href{https://doi.org/10.3847/1538-3881/ab2385}{``Observing Isotopologue Bands in Terrestrial Exoplanet Atmospheres with the James Webb Space Telescope---Implications for Identifying Past Atmospheric and Ocean Loss''}. \textit{The Astronomical Journal}, 158(1), 26.
                     \item Luger, R., Agol, E., Foreman-Mackey, D., Fleming, D. P., \textbf{Lustig-Yaeger, J.}, \& Deitrick, R. (2019).  \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.06559}{``STARRY: Analytic Occultation Light Curves''}. \textit{The Astronomical Journal}, 157(2), 64.
                     \item Lincowski, A. P., Meadows, V. S., Crisp, D., Robinson, T. D., Luger, R., \textbf{Lustig-Yaeger, J.}, \& Arney, G.N. (2018). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1809.07498}{``Evolved Climates and Observational Discriminants for the TRAPPIST-1 Planetary System''}. \textit{The Astrophysical Journal}, 867(1), 76.
                     \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., \textbf{Lustig-Yaeger, J.}, Lyons, T. W., \& Siegler, N. (2018).  \href{http://adsabs.harvard.edu/abs/2018AsBio..18..630M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{Astrobiology}, 18, 630-662.
@@ -137,12 +137,13 @@ Minor in Mathematics\\
                     \item Luger, R., \textbf{Lustig-Yaeger, J.}, Fleming, D. P., Tilley, M. A., Agol, E, Meadows, V. S., Deitrick, R., \& Barnes, R. (2017). \href{http://adsabs.harvard.edu/abs/2017ApJ...837...63L}{``The Pale Green Dot: A Method to Characterize Proxima Centauri b using Exo-Aurorae''}. \textit{The Astrophysical Journal}, 837, 63.
                     \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}
                     \item Greene, T. P., Line, M. R., Montero, C., Fortney, J. J., \textbf{Lustig-Yaeger, J.}, \& Luther, K. (2016). \href{http://adsabs.harvard.edu/abs/2016ApJ...817...17G}{``Characterizing transiting exoplanet atmospheres with JWST''}. \textit{The Astrophysical Journal}, 817(1), 17.
-                    \item Freedman, R. S., \textbf{Lustig-Yaeger, J.}, Fortney, J. J., Lupu, R. E., Marley, M. S., \& Lodders, K. (2014). \href{http://adsabs.harvard.edu/abs/2014ApJS..214...25F}{``Gaseous Mean Opacities for Giant Planet and Ultracool Dwarf Atmospheres over a Range of Metallicities and Temperatures''}. \textit{The Astrophysical Journal Supplement Series}, 214(2), 25.
+                    \item Freedman, R. S., \textbf{Lustig-Yaeger, J.}, Fortney, J. J., Lupu, R. E., Marley, M. S., \& Lodders, K. (2014). \href{http://adsabs.harvard.edu/abs/2014ApJS..214...25F}{``Gaseous Mean Opacities for Giant Planet and Ultracool Dwarf Atmospheres over a Range of Metallicities and Temperatures''}. \textit{The Astrophysical Journal Supplement Series}, 214(2), 25.\\
                 \end{benumerate}
-                {\sl Non-Peer Reviewed}
-                \begin{benumerate}{1}
-                    \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}\\
-                 \end{benumerate}
+                %{\sl Non-Peer Reviewed}
+                %\begin{benumerate}{1}
+                %    \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}\\
+                %\end{benumerate}
+                 
                  
 \section{Presentations} 
                 {\sl Invited Talks}
@@ -150,7 +151,10 @@ Minor in Mathematics\\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
                 \end{benumerate}
                 {\sl Contributed Talks}
-                \begin{benumerate}{5}
+                \begin{benumerate}{8}
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://docs.google.com/viewer?url=https://agu.confex.com/agu/abscicon19/mediafile/ExtendedAbstract/Paper481632/JLY_AbSciCon2019_Abstract3.pdf}{``TRAPPIST-1 and Beyond: Strategies for Characterizing Terrestrial Exoplanets and their Habitability''}. Abstract [202-7] presented at 2019 Astrobiology Science Conference, Bellevue, WA, 24-28 June. 
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://exoplanets.nasa.gov/exep/events/270/exopag-20/}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. ExoPAG 20, Bellevue, WA, 23 Jun.
+                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). ``Detecting and Characterizing Terrestrial Atmospheres in the TRAPPIST-1 System with JWST''. TRAPPIST-1 Conference, Li\`ege, Belgium, 11-14 Jun. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{http://adsabs.harvard.edu/abs/2019AAS...23310303L}{``Simulating the Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. American Astronomical Society Meeting Abstracts, 233, \#103.03
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar, G., Schwieterman, E., W., Fujii, Y., Luger, R., \& Robinson, T. D.\ (2018). \href{https://agu.confex.com/agu/fm18/prelim.cgi/Paper/384157}{``Detecting Oceans on Exoplanets with Next-Generation Telescopes''}. 2018 AGU Fall Meeting, Washington, D.C., 10-14 Dec. P51B-09
                     \item \textbf{Lustig-Yaeger, J.}, Luger, R., \& Agol, E. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4100.pdf}{``Probing the Orbital Dynamics and Atmospheric Properties of the TRAPPIST-1 Planets with JWST''}. Habitable Worlds 2017, \#4100
