Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -177,7 +177,12 @@ Minor in Mathematics\\
  \section{Public Talks}
                 \begin{itemize}  
                     \item ``Proxima Centauri b: A World of Possibilities'' and panel discussion with Guillem Anglada-Escude, Rory Barnes, \& Olivier Guyon, UW Astrobiology \& the NASA Astrobiology Institute Lecture Series, Seattle, WA. May 3, 2017.
-                    \item ``BREAKING: Terrestrial Exoplanet Discovered in the Habitable Zone of Proxima Centauri'' Astronomy on Tap, Peddler Brewing Company, Seattle, WA. August 24, 2016.
+                    \item ``BREAKING: Terrestrial Exoplanet Discovered in the Habitable Zone of Proxima Centauri'' Astronomy on Tap, Peddler Brewing Company, Seattle, WA. August 24, 2016.\\
+                 \end{itemize}
+                 
+\section{Press}
+                \begin{itemize}  
+                    \item University of Washington, Seattle. (2019, August 13). \href{https://www.washington.edu/news/2019/08/13/james-webb-space-telescope-could-begin-learning-about-trappist-1-atmospheres-in-a-single-year-study-indicates/}{``James Webb Space Telescope could begin learning about TRAPPIST-1 atmospheres in a single year, study indicates''} [Press release]. 
                  \end{itemize}
 
 \end{resume}
